engines/wedding-atelier/app/assets/stylesheets/wedding-atelier/components/react/shared/_select_size_modal.scss
.select-size-modal {
  position: absolute;
  width: 100%;
  height: 100vh;
  background: $black-transparent;
  z-index: 1;
  display: none;

  @include screen-xs {
    position: fixed;
    top: 0;
  }

  .btnClose {
    display: none;
    z-index: 101;
    height: 14px;
    width: 14px;
    position: absolute;
    top: 25px;
    right: 107px;
  }

  .profiles-container, .sizes-container {
    display: none;

    &.active {
      display: block;
    }
  }
  .body {
    position:absolute;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    background: $white-two;
    padding: 25px 0;
    width: 320px;

    @include screen-sm {
      width: 360px;
    }

    @include screen-md {
      width: 480px;
    };

    .title {
      font-family: $primary-font;
      font-size: 34px;
    }

    .instructions {
      font-family: $primary-font;
      font-size: 14px;
    }

    .select-different-size {
      margin: 42px 0 72px;
      display: inline-block;
    }

    .content-container {
      margin: 0 auto;
      width: 280px;
      @include screen-sm {
        width: 340px;
      };

      @include screen-md {
        width: 390px;
      };
    }

    .actions {
      button {
        font-size: 10px;
        width: 100%;
        font-weight: normal;

        @include screen-sm {
          margin: 5px 0;
        };
      }
    }

    ul.customization-dress-sizes-ul {
      @include screen-sm {
        width: 280px;
      }
      @include screen-md {
        width: 350px;
      };
    }

    ul.profiles {
      max-width: 340px;
      margin: 0 auto;
      li {
        width: 100%;
        margin: 0;
      }

      label{
        width: auto;
      }
    }
  }
}

